0.3.7
	add .transfer().to for actions
0.3.6
    provide current route mask in action/task
0.3.5
	Ignore all click on links with "target" attribute
0.3.4
	IE-10 fixes
0.3.3 
	add data-atlant="await" to link for not canceling current downloads
0.3.2 
	fix - clear counters if route changed and last route not finished
	fix after task the task view was not forced to update
	(temporary workaround) do not track rejected depends
0.3.1 
	massive changes: syntax changes, refer to doc for last version.
	server render not yet included but possible 
0.3.0
	massive change: improvements for server render to be reality
0.2.12 use "decodeURIComponent" instead of deprecated "unescape"
0.2.11 fix rendering same view several times - now first will stop this.
0.2.10 all route change events will work only after publish(). publish() now
accept "/route/:routeParam" argument
0.2.9 
	- fix internal error piping of render errors 
	- (bug) 'view' can be rendered several times 
0.2.8 fix crash on "bad" json
0.2.7 verbose promises errors, fix counter when render stopped, set common.js
main point.
0.2.6 verbose errors
0.2.5 
	- fix that catched links which has inner elements
	- fix links with no href
	- implement .do() and .log()
	- add all :params, "path", "mask" from route mask into
	do()/render()/depends()/if scopes
	- more fine error catching
0.2.4 fixed double render at page load in Safari
0.2.3 
	- new method .onRenderEnd(callback) - called when everything is rendered
	after route(state) change.
0.2.2 
	- 'when' now accepts a string (not an array) and it is possible to use conditionals inside like "/faq || /about" ('&&' currently not supported )
	- fixed "finally" worked even if condition not "finally"
	- code cleanup (remove 'name' param of if, remove defaultView, defaultRender - use .set instead)
0.2.1 current page hash links now just jump to element (past behaviour: route reloads)
0.2.0 introduce the .finally for declaring "destructing" tree and begin changelog.
