@@ -95,7 +95,7 @@ function Atlant(){
 
     var RenderOperation = {
         render: parseInt(_.uniqueId())
-        ,draw: parseInt(_.uniqueId())
+        ,replace: parseInt(_.uniqueId())
         ,clear: parseInt(_.uniqueId())
         ,redirect: parseInt(_.uniqueId())
         ,move: parseInt(_.uniqueId())
@@ -263,6 +263,12 @@ function Atlant(){
                             } else {
                                 upstream.doLater = function(){utils.goTo(viewProvider)}
                             }
+
+                            whenRenderedSignal(upstream);
+
+                            return;
+                        } else if (RenderOperation.replace === upstream.render.renderOperation ){
+                            upstream.doLater = function(){utils.replace(s.apply(viewProvider, scope))}
 
                             whenRenderedSignal(upstream);
 
@@ -585,10 +591,11 @@ function Atlant(){
             }
             // end redirect/
 
-            if(!redirect.length && Object.keys(upstreams).length) {
+            if(Object.keys(upstreams).length) {
 
                 var allRendered = Promise.all( 
                     Object.keys(upstreams)
+                        .filter(function(x){ return x.doLater === void 0})
                         .map(function(x){ return prefs.render.on.renderEnd(x) })
                 )
 
@@ -1383,6 +1390,8 @@ function Atlant(){
     this.redirect = function(redirectProvider) {return _render.bind(this)(redirectProvider, void 0, RenderOperation.redirect);}
     // Alias for redirect
     this.go =  this.redirect;
+    //  Fake redirect. Atlant will just change URL but routes will not be restarted.
+    this.replace = function(replaceProvider) {return _render.bind(this)(replaceProvider, void 0, RenderOperation.replace);}
     // Force redirect event to current route
     // this.force = _.force;
     // Redirects using location.assign - the page *WILL* be reloaded instead of soft atlant-inside redirect.
@@ -1410,9 +1419,9 @@ function Atlant(){
     // Returns atlant.js version
     this.version = '0.3.7';
     // Returns timestamp of the creation time
-    this.build = "1416215314871";
+    this.build = "1416474985341";
     // Returns commit id just before current atlant.js commit
-    this.revision = "adb362dfddb3f9341851a7a5f3ca10a52a46b80f";
+    this.revision = "fe30d6813bbf47f6a9e726de029e537dba52b636";
 
     // This command will immediatelly redirect to param url
     this.goTo = _redirectTo;
@@ -2085,6 +2094,14 @@ var s = (function(){
         return tryD(fn, function(e) { return Promise.reject(e) })
     }
 
+    var _apply = function(doProvider, value) {
+        if ('function' === typeof doProvider) {
+            return doProvider(value);
+        } else {
+            return doProvider;
+        }
+    }
+
     this.compose      = _.compose;
     this.curry        = _.curry;
     this.pass   = pass;
@@ -2137,6 +2154,8 @@ var s = (function(){
     this.isPromise = isPromise;
     this.simpleType = simpleType;
     this.tryD = tryD;
+    this.apply = _apply;
+
     this.baconTryD = baconTryD;
     this.promiseTryD = promiseTryD;
     /**
@@ -2586,8 +2605,10 @@ var utils = function() {
 utils.isIE = function()
 {
     var isIE11 = navigator.userAgent.indexOf(".NET") > -1;      
-    var isIE11orLess = isIE11 || navigator.appVersion.indexOf("MSIE") != -1;
-    return isIE11orLess;
+    var isIELess11 = navigator.appVersion.indexOf("MSIE") > -1;
+    var isMobileIE = navigator.userAgent.indexOf('IEMobile') > -1
+    return isIE11 || isIELess11 || isMobileIE;
+     
 }
 
 /**
@@ -2610,7 +2631,21 @@ utils.goTo = function(awaitLoad, url, awaitLoadForce) {
         }
     }
 
-    setTimeout( history.pushState.bind(this, null, null, url), 0);
+    setTimeout( history.pushState.bind(history, null, null, url), 0);
+}
+
+/**
+ * Redirect to the other path using $location
+ * @param upstream
+ * @returns {*}
+ */
+utils.replace = function(url) {
+
+    if ('undefined' === typeof window) return;
+    if ( (window.location.origin + url) === window.location.href)  return;
+
+    console.log('replace:', arguments)
+    setTimeout( history.replaceState.bind(history, null, null, url), 0);
 }
 
 utils.attachGuardToLinks = function() {
